# TensorCoresBenchmark

./: CMakeLists.txt  helpers.cuh  helpers.h  kernelHelpers.cuh  kernels.cuh  matrixMul.cuh  tensorCoreBenchmark.cu  test.cu
